--- a/animations/style.css
+++ b/animations/style.css
@@ -5,5 +5,58 @@
 }
 
 body {
+  padding: 2rem;
   background-color: #111;
+}
+
+.ball {
+  width: 6rem;
+  height: 5rem;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+  background-color: rgba(250, 235, 215, 0.904);
+  animation-name: bounce;
+  animation-duration: 0.4s;
+  animation-delay: 1s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: ease-out;
+}
+.ball:after {
+  content: "Ball";
+  color: rgba(250, 235, 215, 0.904);
+  font-size: 2rem;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  position: absolute;
+  padding-left: 4rem;
+  animation-name: bounce;
+  animation-duration: 0.4s;
+  animation-delay: 1s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: ease-out;
+}
+.base {
+  width: 90%;
+  height: 0.1rem;
+  position: absolute;
+  top: 56%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: aliceblue;
+}
+
+@keyframes bounce {
+  0% {
+    top: 50%;
+    left: 50%;
+  }
+  100% {
+    width: 4rem;
+    top: 30%;
+    left: 50%;
+  }
 }
